@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 3.3.3
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed a crash when refreshing contents with an invalid info or quick ref GUI (#110)
 ---------------------------------------------------------------------------------------------------
 Version: 3.3.2
 Date: 2022-03-20
